# deepzoom.py

./: .gitignore  pyproject.toml
deepzoom/: __init__.py  _defaults.py  _image_descriptor.py  _utils.py  collection.py  creator.py
examples/: deepzoom-cli.py
examples/helloworld/: helloworld-dzc.py  helloworld-dzi.py
